--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,10 @@
 ### YamlMime:Yaml
-ms.openlocfilehash: c673abced1f8dda8f33bb729f27f9a4e1efe482c
-ms.sourcegitcommit: 82f364d63269c277208cf43051f26cc26a25f1a4
-ms.translationtype: HT
-ms.contentlocale: es-ES
-ms.lasthandoff: 06/09/2021
-ms.locfileid: "111864218"
+# ms.openlocfilehash: c673abced1f8dda8f33bb729f27f9a4e1efe482c
+# ms.sourcegitcommit: 82f364d63269c277208cf43051f26cc26a25f1a4
+# ms.translationtype: HT
+# ms.contentlocale: es-ES
+# ms.lasthandoff: 06/09/2021
+# ms.locfileid: "111864218"
 trigger:
   - "*"
 pool:
